Fixed dark mode + bug fixes

--- a/dots/.config/waybar/style.css
+++ b/dots/.config/waybar/style.css
@@ -14,7 +14,9 @@
 * {
   border: none;
   border-radius: 0px;
-  font-family: "JetBrains Mono", FontAwesome, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
+    Helvetica, sans-serif;
   font-size: 13px;
   min-height: 0;
   background: transparent;
@@ -94,7 +96,9 @@ tooltip {
   background: transparent;
   color: @color8;
 
-  padding: 0px 2px 0px 2px;
+  border-radius: 0.4rem;
+
+  padding: 0px 4px 0px 4px;
   margin: 0;
 }
 
